# location_based_weibo_collector

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  flexible_collector.py  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
data/input/: cookies_template.txt  locations.csv
data/output/: .gitkeep
docs/: API.md  CHANGELOG.md
examples/: convert_coordinates_example.py  coordinates_lat_lng.csv  coordinates_standard.csv  example_coordinates_different_formats.csv
src/: __init__.py
src/collectors/: __init__.py  coordinate_collector.py  url_generator.py  weibo_collector.py
src/utils/: __init__.py  file_converter.py  workflow.py
tests/: __init__.py  test_basic.py  test_simple.py
