[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "weibo-data-collector"
dynamic = ["version"]
description = "A comprehensive Python toolkit for collecting Weibo posts from specific locations using coordinate-based search"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Location-based Weibo Data Collector Team", email = "contact@example.com"}
]
maintainers = [
    {name = "Location-based Weibo Data Collector Team", email = "contact@example.com"}
]
keywords = ["weibo", "data-collection", "social-media", "scraping", "location-based"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0,<2.0.0",
    "requests>=2.25.0,<3.0.0",
    "beautifulsoup4>=4.9.0,<5.0.0",
    "lxml>=4.6.0,<5.0.0",
    "selenium>=4.0.0,<5.0.0",
    "urllib3>=1.26.0,<2.0.0",
    "chardet>=4.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
    "pre-commit>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/weibo-data-collector"
Documentation = "https://github.com/your-username/weibo-data-collector#readme"
Repository = "https://github.com/your-username/weibo-data-collector"
"Bug Tracker" = "https://github.com/your-username/weibo-data-collector/issues"
Changelog = "https://github.com/your-username/weibo-data-collector/blob/main/docs/CHANGELOG.md"

[project.scripts]
weibo-collector = "src.utils.workflow:main"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 